fix icons not showing because of content justification

--- a/dashboard/dashboard.css
+++ b/dashboard/dashboard.css
@@ -213,5 +213,8 @@ section {
         font-size: 1.5rem;
     }
 
+    .table__section {
+        justify-content: left;
+    }
 
 }
